# DevMirror

./: .claudeignore  .gitignore  README.md  SPECIFICATION.md  azure-pipelines.yml  databricks.yml  pyproject.toml  setup.py
.claude/commands/: accept.md  analyze.md  checklist.md  clarify.md  constitution.md  dashboard.md  implement.md  merge.md  plan.md  research.md  review.md  specify.md  status.md  tasks.md
.lakeforge/: AGENTS.md  config.yaml  metadata.yaml
.lakeforge/scripts/: debug-dashboard-scan.py  validate_encoding.py
.lakeforge/templates/: POWERSHELL_SYNTAX.md  agent-file-template.md  spec-template.md  task-prompt-template.md  tasks-template.md  vscode-settings.json
app/: app.yaml  pyproject.toml  requirements.txt
app/backend/: approvals.py  auth.py  config.py  helpers.py  main.py  models.py  repository.py  router.py  router_admin.py  router_stage2.py  tasks.py
app/backend/static/: index.html
app/backend/static/assets/: index-8JzXgp7E.js  index-BSNugPDV.css  index-BdYrbMUy.css  index-BrK87KGl.css  index-BvkyuKol.js  index-Cf6LgBqf.js  index-CmC9gYu4.js  index-SXAewCDK.js  index-mP60n0-h.css
app/tests/: conftest.py  test_admin_approvals.py  test_auth.py  test_models.py  test_repository.py  test_router.py  test_stage2.py  test_startup_validation.py
app/ui/: index.html  package-lock.json  package.json  vite.config.ts
app/ui/src/: App.tsx  UserContext.tsx  api.ts  styles.css  types.ts
app/ui/src/components/: MultiInput.tsx  RevisionSelector.tsx  StreamSearch.tsx  ValidationBanner.tsx
app/ui/src/pages/: AdminApprovals.tsx  ConfigForm.tsx  ConfigList.tsx  DrList.tsx  DrStatus.tsx  ProvisionProgress.tsx  ScanResults.tsx
devmirror/: __init__.py  cli.py  jobs.py  settings.py
devmirror/cleanup/: cleanup_engine.py  notifier.py
devmirror/config/: schema.py
devmirror/control/: audit.py  control_table.py
devmirror/migrations/: 001_control_tables.sql  002_devmirror_configs.sql  003_id_counter.sql
devmirror/modify/: modification_engine.py
devmirror/provision/: access_manager.py  object_cloner.py  runner.py
devmirror/refresh/: refresh_engine.py
devmirror/scan/: dependency_classifier.py  (+3 more)
examples/: adw-dr-config.yaml  sample-dr-config.yaml
scripts/: deploy.sh
(+126 files in other folders)
