[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devmirror-app"
version = "0.1.0"
description = "DevMirror web application backend"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pyyaml>=6.0",
    "devmirror",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = ["pytest>=8.0,<9.0", "httpx>=0.27"]
